force-app/main/default/objects/digitsec__c/digitsec__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>digitsec</label>
</CustomObject>