force-app/main/default/objects/digitsec__c/fields/DigitSec_Findings__c.field-meta.xml
<CustomField>
    <fullName>DigitSec_Findings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save as DigitSec Findings</label>
    <type>Checkbox</type>
</CustomField>