force-app/main/default/objects/digitsec__c/fields/orgId__c.field-meta.xml
<CustomField>
    <fullName>orgId__c</fullName>
    <label>orgId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>