force-app/main/default/objects/digitsec__c/fields/Scan_all_commits__c.field-meta.xml
<CustomField>
    <fullName>Scan_all_commits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scan the entire user story</label>
    <type>Checkbox</type>
</CustomField>