force-app/main/default/objects/digitsec__c/fields/ScanCommit__c.field-meta.xml
<CustomField>
    <fullName>ScanCommit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scan the last commit of the user story</description>
    <label>Scan Commit</label>
    <type>Checkbox</type>
</CustomField>